...
                visible = isLoadingData,
                enter = fadeIn(),
                exit = fadeOut(),
            ) {
                CircularProgressIndicator(
                    Modifier
                        .testTag("workIncidentsLoadingIndicator")
                        .wrapContentSize()
                        .size(24.dp),
                    color = Color.White,
                )
            }
        }
...
