...
        ) = createRefs()

        if (isMapView) {
            if (showCasesMainActions) {
                CrisisCleanupFab(
                    modifier = modifier
                        .testTag("workIncidentSelectorFab")
                        .constrainAs(disasterAction) {
                            start.linkTo(parent.start, margin = actionEdgeSpace)
                            top.linkTo(parent.top, margin = actionEdgeSpace)
                        },
                    onClick = onSelectIncident,
                    shape = CircleShape,
...
            val enableLowerActions = isMapView || !disableTableViewActions

            val onNewCase = remember(onCasesAction) { { onCasesAction(CasesAction.CreateNew) } }
            CrisisCleanupFab(
                modifier = modifier
                    .actionSize()
                    .testTag("workNewCaseFab")
                    .constrainAs(newCaseFab) {
                        end.linkTo(toggleTableMap.end)
                        bottom.linkTo(toggleTableMap.top, margin = actionEdgeSpace)
                    },
                onClick = onNewCase,
                shape = actionRoundCornerShape,
...
