<resources>
    <!--
        Fallback for when app loads initially.
        If the first load is slow or an internet connection is not available translations without fallbacks will show the translation keys.
    -->
    <string name="login">Login</string>
    <string name="loginWithEmail">Login with Email</string>
    <string name="loginWithPhone">Login with Cell Phone</string>
    <string name="volunteerWithYourOrg">Volunteer with your Org</string>
    <string name="iNeedHelpCleaningUp">I need help cleaning up</string>
    <string name="reliefOrgAndGovOnly">Relief organizations and government only.</string>
    <string name="registerHere">Register here</string>
    <string name="loginUsingDifferentMethod">Login using different method</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
</resources>