...
            updateWrongLocation(!inputData.hasWrongLocation)
        }
    }
    CrisisCleanupTextCheckbox(
        listItemModifier
            .listCheckboxAlignStartOffset()
            .testTag("locationAddressProblemsCheckbox"),
        inputData.hasWrongLocation,
        text = translator("caseForm.address_problems"),
        onToggle = toggleWrongLocation,
        onCheckChange = updateWrongLocation,
        enabled = isEditable,
    )
...
