...
            Row(
                modifier = fillWidthPadded,
                horizontalArrangement = Arrangement.Start,
            ) {
                Image(
                    modifier = Modifier
                        .testTag("ccuLogo")
                        .sizeIn(maxWidth = 160.dp),
                    painter = painterResource(commonR.drawable.crisis_cleanup_logo),
                    contentDescription = stringResource(commonR.string.crisis_cleanup),
                )
            }
        }
...
