...
            }
        }
    val actionsContent: (@Composable (RowScope.() -> Unit)) = @Composable {
        AvatarAttentionBadge(isActionAttention) {
            IconButton(
                onClick = onActionClick,
                modifier = accountToggleModifier.testTag("topBarAvatarIconBtn"),
            ) {
                AvatarIcon(
                    profilePictureUri,
                    actionText,
                    fallbackIcon = actionIcon,
                )
...
