...
                }
                val translateKey = if (isObfuscating) {
                    "actions.show"
                } else {
                    "actions.hide"
                }
                val iconTestTag = if (isObfuscating) "textFieldShowIcon" else "textFieldHideIcon"
                val translator = LocalAppTranslator.current
                Icon(
                    icon,
                    contentDescription = translator(translateKey),
                    tint = MaterialTheme.colorScheme.primary,
                    modifier = Modifier.testTag(iconTestTag),
...
