...
enum class CasesAction(
    val iconResId: Int,
    val descriptionTranslateKey: String,
    val testTag: String,
) {
    CreateNew(android.R.drawable.btn_plus, "nav.new_case", "workNewCaseBtn"),
    Search(R.drawable.ic_search, "actions.search", "workIncidentSearchBtn"),
    TableView(R.drawable.ic_table, "actions.table_view_alt", "workTableViewToggleBtn"),
    Filters(R.drawable.ic_dials, "casesVue.filters", "workIncidentFilterBtn"),
    Layers(R.drawable.ic_layers, "casesVue.layers", "workIncidentLayerBtn"),
    MapView(R.drawable.ic_map, "casesVue.map_view", "workMapViewToggleBtn"),
    ZoomToInteractive(
        R.drawable.ic_zoom_interactive,
        "worksiteMap.zoom_to_interactive",
        "workZoomToInteractiveBtn",
...
