name: Switch incidents from incident selector
appId: ${MAESTRO_APP_ID}
tags:
  - development
  - staging
  - production
  - pull-request
onFlowStart:
  - runFlow: ../auth-tests/login.yaml
env:
  INCIDENT_SELECTOR_ID: appIncidentSelector
  FIRST_INCIDENT: ".*(flood|tornado).*"
  SECOND_INCIDENT: ".*(storm|hurricane|fire).*"
---
# wait for incidents to load
- waitForAnimationToEnd:
    timeout: 5000
# wait till spinner is invisible
- assertNotVisible:
    id: workIncidentsLoadingIndicator
- tapOn: "Menu"

# Find first type incident and select it
- tapOn:
    id: ${INCIDENT_SELECTOR_ID}
- assertVisible: "Change Incident"

- scrollUntilVisible:
    element: ${FIRST_INCIDENT}

- tapOn:
    text: ${FIRST_INCIDENT}
    index: 0

- assertVisible: ${FIRST_INCIDENT} 

# Find second type of incident and select it
- tapOn:
    id: ${INCIDENT_SELECTOR_ID}
- assertVisible: "Change Incident"

- scrollUntilVisible:
    element: ${SECOND_INCIDENT}

- tapOn:
    text: ${SECOND_INCIDENT}
    index: 0

- assertVisible: ${SECOND_INCIDENT}

# Find first type of incident again and select it
- tapOn:
    id: ${INCIDENT_SELECTOR_ID}
- assertVisible: "Change Incident"

- scrollUntilVisible:
    element: ${FIRST_INCIDENT}

- tapOn:
    text: ${FIRST_INCIDENT}
    index: 0

- assertVisible: ${FIRST_INCIDENT}

