name: Incident Selector
appId: ${MAESTRO_APP_ID}
tags:
  - development
  - staging
  - production
  - pull-request
onFlowStart:
  - runFlow: ../auth-tests/login.yaml
---
- tapOn:
    id: "workIncidentSelectorFab"
- assertVisible: "Change Incident"
- assertVisible: "Close"
- "scroll"
- assertNotVisible: "Menu"
- tapOn: "Close"
- assertNotVisible: "Close"
- assertVisible: "Menu"
