name: Logout
appId: ${MAESTRO_APP_ID}
onFlowStart:
  - runFlow: login.yaml
---
- launchApp
- assertVisible: "Work"
- assertVisible: "Menu"
- tapOn: "Menu"
- tapOn: "Account"
- tapOn: "Logout"
- assertVisible: "Crisis Cleanup"
- assertVisible:
    text: "Login"
    index: 0
