name: Logout
appId: ${MAESTRO_APP_ID}
tags:
  - development
  - staging
  - production
  - auth
  - pull-request
onFlowStart:
  - runFlow: login.yaml
---
- launchApp
- assertVisible:
    id: navItem_Work
- assertVisible:
    id: navItem_Menu
- tapOn:
    id: navItem_Menu
- tapOn:
    id: topBarAvatarIconBtn
- tapOn:
    id: authedProfileLogoutBtn
- assertVisible:
    id: ccuLogo
- assertVisible:
    id: loginEmailHeaderText
