name: New Case View
appId: ${MAESTRO_APP_ID}
tags:
  - development
  - staging
  - production
  - pull-request
onFlowStart:
  - runFlow: ../auth-tests/login.yaml
---
# wait for incidents to load
- waitForAnimationToEnd:
    timeout: 5000
# start searching after loading spinner is invisible
- assertNotVisible:
    id: workIncidentsLoadingIndicator
- tapOn:
    id: "workNewCaseFab"
- assertVisible: ".*new case.*"
- assertVisible:
    text: "back"
    index: 1

- evalScript: |
    "${
      output.result = { 
        testTags: [
          'caseEditCancelBtn',
          'caseEditClaimAndSaveBtn',
          'caseEditSaveBtn'
        ],
      }
    }"
- evalScript: ${output.i1 = 0}
- repeat:
    while:
      'true': ${output.i1 < output.result.testTags.length}
    commands:
      - assertVisible:
          id: ${output.result.testTags[output.i1]}
      - evalScript: ${output.i1 = output.i1 + 1}

# New case sections and required elements should be visible
- evalScript: |
    "${
      output.result = { 
        testTags: [
          'propertyResidentNameTextField',
          'propertyPhone1TextField',
          'propertyPhone2TextField',
          'propertyEmailTextField',
          'propertyLocationFullAddressTextField',
          'propertyLocationSelectOnMapBtn',
          'propertyLocationUseMyLocationBtn',
        ],
      }
    }"
- evalScript: ${output.i2 = 0}
- repeat:
    while:
      'true': ${output.i2 < output.result.testTags.length}
    commands:
      - scrollUntilVisible:
          element:
            id: ${output.result.testTags[output.i2]}
          direction: DOWN
      - assertVisible:
            id: ${output.result.testTags[output.i2]}
      - evalScript: ${output.i2 = output.i2 + 1}

# Clicking cancel should close popup
- tapOn: 
    id: caseEditCancelBtn
- assertVisible:
    id: "navItem_Work"
- assertVisible:
    id: "navItem_Menu"

# Reopen New case popup
- tapOn:
    id: "workNewCaseFab"
- assertVisible: ".*new case.*"
- assertNotVisible:
    id: "navItem_Work"
- assertNotVisible:
    id: "navItem_Menu"

# Clicking back should close popup
- tapOn:
    text: ".*back.*"
    index: 1
- assertVisible:
    id: "navItem_Work"
- assertVisible:
    id: "navItem_Menu"
