name: Profile Page
appId: ${MAESTRO_APP_ID}
tags:
  - development
  - staging
  - production
  - auth
  - pull-request
onFlowStart:
  - runFlow: login.yaml
---
- launchApp
- tapOn:
    id: navItem_Menu
- tapOn:
    id: topBarAvatarIconBtn
- assertVisible:
    id: ccuLogo
# Currently logged in user's email should be visible on profile page
- assertVisible: .*${MAESTRO_APP_EMAIL}.*
- assertVisible:
    id: authedProfileLogoutBtn
- assertVisible:
    id: authedProfileDismissBtn

