name: Login
appId: ${MAESTRO_APP_ID}
---
- clearState
- launchApp
- assertVisible: "Crisis Cleanup"
- assertVisible:
    text: "Login"
    index: 0
- assertVisible: "Email"
- tapOn: "Email"
- inputText: ${MAESTRO_APP_EMAIL}
- tapOn: "Password"
- inputText: ${MAESTRO_APP_PASSWORD}
- tapOn:
    text: "Login"
    index: 1
- assertVisible: "Work"
- assertVisible: "Menu"
- assertVisible: "Change Incident"
- assertVisible: "Search"
- assertVisible: "Filters"

